--- a/vitepress/dockerfile
+++ b/vitepress/dockerfile
@@ -2,10 +2,10 @@ FROM node:20-slim
 
 WORKDIR /app
 
-COPY package*.json .
+COPY package*.json ./
 
 RUN npm ci
 
 COPY . .
 
-CMD ["npm", "run", "docs:build"]
+RUN npm run docs:build
