fix: 調整專案結構及服務設定

--- a/vitepress/dockerfile
+++ b/vitepress/dockerfile
@@ -1,11 +1,11 @@
-FROM node:20-slim
-
+# 第一階段：建構 vitepress 靜態網站
+FROM node:20-slim AS builder
 WORKDIR /app
-
 COPY package*.json ./
-
 RUN npm ci
-
 COPY . .
-
 RUN npm run docs:build
+
+# 第二階段：nginx serve 靜態檔案
+FROM nginx:alpine
+COPY --from=builder /app/docs/.vitepress/dist /usr/share/nginx/html
