--- a/vitepress/package.json
+++ b/vitepress/package.json
@@ -3,7 +3,7 @@
     "vitepress": "^1.6.3"
   },
   "scripts": {
-    "docs:dev": "vitepress dev docs",
+    "docs:dev": "vitepress dev docs --port 5175",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs"
   }
