fix: 調整資料夾結構

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   nginx:
-    build: ./vitepress
+    build: .
     container_name: note
     volumes:
       - ./nginx/log:/var/log/nginx
