feat: 新增 Discord 部署通知，成功與失敗時發送消息

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,3 +64,21 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+
+      - name: Discord 部署成功通知
+        if: success()
+        uses: sarisia/actions-status-discord@v1
+        with:
+          webhook: ${{ secrets.DISCORD_WEBHOOK }}
+          title: "✅ 部署成功"
+          description: "Note 服務器已成功部署"
+          color: 0x00ff00
+
+      - name: Discord 部署失敗通知
+        if: failure()
+        uses: sarisia/actions-status-discord@v1
+        with:
+          webhook: ${{ secrets.DISCORD_WEBHOOK }}
+          title: "❌ 部署失敗"
+          description: "Note 服務器部署失敗"
+          color: 0xff0000
