--- a/package.json
+++ b/package.json
@@ -1,11 +1,22 @@
 {
   "devDependencies": {
+    "markdownlint-cli2": "^0.20.0",
     "vitepress": "^1.6.3",
     "vitepress-plugin-llms": "^1.8.0"
   },
   "scripts": {
     "docs:dev": "vitepress dev docs --port 5175",
     "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:preview": "vitepress preview docs",
+    "lint:md": "markdownlint-cli2 \"**/*.md\" \"!node_modules\"",
+    "lint:md:fix": "markdownlint-cli2 --fix \"**/*.md\" \"!node_modules\""
+  },
+  "markdownlint-cli2": {
+    "config": {
+      "MD013": false,
+      "no-duplicate-heading": {
+        "siblings_only": true
+      } 
+    }
   }
 }
