feat: 新增 Discord 部署失敗通知功能，並修正 TypeScript 指令連結錯誤

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,6 +52,15 @@ jobs:
         with:
           path: docs/.vitepress/dist
 
+      - name: Discord 部署失敗通知
+        if: failure()
+        uses: sarisia/actions-status-discord@v1
+        with:
+          webhook: ${{ secrets.DISCORD_WEBHOOK }}
+          title: "❌ 打包失敗"
+          description: "Note 服務器打包失敗"
+          color: 0xff0000
+
   # Deployment job
   deploy:
     environment:
