--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,10 @@ on:
   # using the `master` branch as the default branch.
   push:
     branches: [main]
+    paths:
+      - 'docs/**'
+      - 'package.json'
+      - 'package-lock.json'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -59,7 +63,7 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     needs: build
-    if: always()
+    if: ${{ !cancelled() }}
     runs-on: ubuntu-latest
     name: Deploy
     steps:
@@ -69,7 +73,7 @@ jobs:
         uses: actions/deploy-pages@v4
 
       - name: Discord 打包失敗通知
-        if: always() && needs.build.result != 'success'
+        if: needs.build.result != 'success'
         uses: sarisia/actions-status-discord@v1
         with:
           webhook: ${{ secrets.DISCORD_WEBHOOK }}
@@ -78,7 +82,7 @@ jobs:
           description: 'Note 服務器打包失敗'
 
       - name: Discord 部署通知
-        if: always() && needs.build.result == 'success'
+        if: needs.build.result == 'success'
         uses: sarisia/actions-status-discord@v1
         with:
           webhook: ${{ secrets.DISCORD_WEBHOOK }}
